[package]
name = "sra_metadata_parser"
version = "0.1.0"
authors = ["James Schinner <james.peter.schinner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.20.0"
tar = "0.4.30"
flate2 = "1.0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
csv = "1.1"
clap = "3.0.0-beta.2"